<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/nameMobile_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:paddingTop="5dp"
                    android:text="Please add your name and country code with mobile number"
                    android:textColor="#6e717a"
                    android:textSize="19sp"
                    android:textStyle="normal|bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:digits=" qwertyuioplkjhgfdsazxcvbnm_-1234567890QWERTYUIOPLKJHGFDSAZXCVBNM"
                        android:hint="@string/username"
                        android:maxLength="15"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColorHint="#acacac"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="Country Code:"
                        android:textColor="#acacac"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/input_countrycode"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:digits="+0123456789"
                        android:editable="false"
                        android:inputType="numberSigned|numberDecimal|numberPassword|phone"
                        android:maxLength="4"
                        android:paddingLeft="5dp"
                        android:imeOptions="actionNext"
                        android:text="+91"
                        android:textColorHint="#acadb1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/mobile"
                        android:textColor="#acacac"
                        android:textSize="18sp" />


                    <!--   <android.support.design.widget.TextInputLayout
                           android:id="@+id/input_layout_email"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginLeft="10dp"
                           android:layout_marginRight="10dp"
                           android:layout_marginTop="30dp">-->

                    <EditText
                        android:id="@+id/input_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColorHint="#acacac"
                        android:textSize="18sp" />
                    <!--</android.support.design.widget.TextInputLayout>-->


                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/layout_bg"
                        android:onClick="btn_Continue_Click"
                        android:text="Submit"
                        android:textColor="#acadb1"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="We do not spam, your number is secure with us"
                        android:textColor="#acacac"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/OTP_LL"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="17dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/tv"
                    android:gravity="center"
                    android:text="One Time Password (OTP)"
                    android:textColor="#acacac"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/msg_sit_back"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/msg_manual_otp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="One Time Password (OTP) has sent to you mobile  ******2502, please enter the same here to login."
                    android:textColor="#acacac"
                    android:textSize="12sp" />

                <!-- <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:layout_marginRight="25dp"
                     android:layout_marginTop="25dp"
                     android:orientation="horizontal">-->

                <EditText
                    android:id="@+id/input_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="25dp"
                    android:hint="@string/otp"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textColorHint="#acacac" />

                <!--  </LinearLayout>-->

                <Button
                    android:id="@+id/btn_otp_ctn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/layout_bg"
                    android:onClick="btn_Otp_Continue_Click"
                    android:text="Submit"
                    android:textColor="#acadb1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:onClick="btn_Otp_Resend_Click"
                    android:text="Re-Send (OTP)"
                    android:textColor="#acacac"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bloodSelection_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="17dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="Pick your blood group"
                    android:textColor="#acacac"
                    android:textSize="18dp" />

                <!--   <NumberPicker
                       android:id="@+id/np"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/tv"
                       android:layout_marginTop="20dp" />-->
                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/number_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_height="180dp"
                    app:np_textColor="@color/colorPrimary"
                    app:np_textSize="@dimen/text_size"
                    app:np_typeface="@string/roboto_light"
                    app:np_width="64dp" />

                <TextView
                    android:id="@+id/input_layout_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:hint="Select your Location"
                    android:textColor="#acacac" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/colorAccent"/>

                <Button
                    android:id="@+id/btn_blood_location"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/layout_bg_colorline"
                    android:onClick="btn_Continue_Click_blood"
                    android:text="Submit"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>